--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ out_lora_train
 lora_models
 merged_model
 
-!./models/Qwen/down_MS_model.py
+!./models/down_MS_model.py
 !down_HF_model.py
 models
